# inspector

./: Cargo.toml  README.md  package-lock.json  package.json  test_hands.txt  tsconfig.json
backend/src/: main.rs
data/: hands.db  hands.sql
src/: db.rs  main.rs  overlay.rs  parse.rs  store.js
src-tauri/: Cargo.toml  db.sqlite  tauri.conf.json
src-tauri/data/: hands.sql
src-tauri/migrations/2024-05-29-205557_create_posts/: down.sql  up.sql
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  notify_example.rs  parse.rs  parse_db.rs  schema.rs  stats.rs  track.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/extractor/: mod.rs
src-tauri/src/parse/: error.rs  hand.rs  mod.rs  re.rs  start.rs
src/lib/: App.svelte  Box.svelte  Dropdown.svelte  Plot.svelte  Position.svelte  Sidebar.svelte  StatsSummary.svelte  ViewA.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/graph/: +page.svelte
src/routes/profile/: +page.svelte
test/: test.db  test_hands.txt
