[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.35"
pretty_assertions = "1.4.0"
regex = "1.10.4"
tauri = { version = "1.6.1", features = [] }
rand = "0.8.5"
diesel = { version = "2.1.0", features = [
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
] }
dotenvy = "0.15"
lazy_static = "1.4.0"
notify = "6.1.1"
log = "0.4.21"
env_logger = "0.11.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
